--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.6",
     "@gorhom/portal": "^1.0.14",
+    "@notifee/react-native": "^7.8.2",
+    "@pusher/pusher-websocket-react-native": "^1.3.1",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/messaging": "^19.2.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
