--- a/api/config.example.json
+++ b/api/config.example.json
@@ -3,6 +3,7 @@
     "name": "Example 2FA App",
     "host": "127.0.0.1",
     "port": 8080,
+    "key": "",
     "timezone": "UTC"
   },
   "database": {
@@ -12,6 +13,16 @@
     "username": "postgres",
     "password": "postgres"
   },
+  "firebase": {
+    "service_account_file": "./firebase-admin-sdk.json"
+  },
+  "pusher": {
+    "app_id": "",
+    "key": "",
+    "secret": "",
+    "cluster": "",
+    "secure": false
+  },
   "refresh_token": {
     "private_key": "",
     "public_key": "",
@@ -20,6 +31,6 @@
   "access_token": {
     "private_key": "",
     "public_key": "",
-    "expires_in": 15
+    "expires_in": 60
   }
 }
