chore(mobile app): update app name

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "Example2FAApp",
-  "displayName": "Example2FAApp"
+  "name": "TwoFactorAuthApp",
+  "displayName": "TwoFactorAuthApp"
 }
