--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Example2FAApp",
+  "name": "two-factor-auth-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
